# soloJ

j1/: README.md  package-lock.json  package.json
j10/: README.md  main.py  requirements.txt
j100/: .env.example  Dockerfile  requirements.txt
j11/: Makefile  README.md
j11/wasm/: CMakeLists.txt  build.ps1
j11/wasm/src/: fft.cpp  fft.h  fingerprint.cpp  fingerprint.h  main.cpp
j12/: Makefile  README.md  config.yaml  go.mod
j13/: .env.example  package.json
j14/: README.md  app.py  config.py  requirements.txt  run.bat  run.sh
j15/: package-lock.json  package.json  tsconfig.json
j16/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
j17/: Makefile  README.md  go.mod
j18/: README.md  docker-compose.yml
j19/: README.md  docker-compose.yml  start.bat  start.sh
j2/: Makefile  build.bat  go.mod  run_server.bat
j20/: README.md  index.html
j21/: .env.example  README.md  docker-compose.yml
j22/: README.md  requirements.txt  start.bat  start.sh  test_bit_order.py  test_client.py  test_cnot_bug.py  test_cnot_bug_numpy.py  test_cnot_complex.py  test_cnot_detailed.py  test_cnot_order.py  (+4 more)
j23/: Cargo.toml  config.toml  test_file.txt
j23/src/: config.rs  connection.rs  cubic.rs  lib.rs  main.rs  multipath_receiver.rs  multipath_sender.rs  network.rs  packet.rs  path_manager.rs  receiver.rs  rto.rs  sender.rs  stats.rs  ui.rs  window.rs
j30/wasm/: BUILD  CMakeLists.txt  WORKSPACE
j30/wasm/include/: ai_gateway_filter.h  inference_cache.h  inference_engine.h  memory_pool.h  pipeline_config.h  pipeline_executor.h  route_config.h
j30/wasm/scripts/: build_wasm.sh
j30/wasm/src/: ai_gateway_filter.cc  inference_cache.cc  inference_engine.cc  pipeline_config.cc  pipeline_executor.cc  route_config.cc
j32/scoring/: Cargo.toml
j32/scoring/src/: main.rs
j35/collision_service/: CMakeLists.txt  Dockerfile
j35/collision_service/proto/: collision.proto
j35/collision_service/src/: aoe_checker.cpp  aoe_checker.h  collision_server.cpp  collision_server.h  frame_sync.cpp  frame_sync.h  main.cpp  prediction_hotspot.cpp  prediction_hotspot.h  quadtree.cpp  quadtree.h  resource_allocator.cpp  resource_allocator.h  skill.h  skill_predictor.cpp  skill_predictor.h  unit.h
j35/damage_arbiter/: CMakeLists.txt  Dockerfile
j35/damage_arbiter/proto/: damage_arbiter.proto
j35/damage_arbiter/scripts/: block.lua  critical.lua  damage_share.lua  dodge.lua  init.lua  skill_priority.lua
j35/damage_arbiter/src/: arbiter.cpp  arbiter.h  arbiter_server.cpp  arbiter_server.h  lua_bindings.cpp  lua_engine.cpp  lua_engine.h  main.cpp  priority_queue.h
j36/: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
j36/cpp/: style_rearranger.cpp  style_rearranger.h
j36/cpp/nlohmann/: json.hpp
j36/src/: App.svelte  vite-env.d.ts
j36/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
j36/src-tauri/resources/: README.md
j36/src-tauri/src/: commands.rs  lib.rs  main.rs  types.rs
j36/src-tauri/src/batch/: directory_scanner.rs  mod.rs  processor.rs
j36/src-tauri/src/core/: azw_parser.rs  epub_parser.rs  metadata.rs  mod.rs  parser.rs  pdf_parser.rs
j36/src-tauri/src/diff/: diff_engine.rs  diff_report.rs  mod.rs
j36/src-tauri/src/drm/: calibre_integration.rs  dedrm_plugin.rs  drm_remover.rs  mod.rs
j36/src-tauri/src/layout/: ffi.rs  layout_engine.rs  mod.rs
j36/src-tauri/src/ocr/: layout_analyzer.rs  markdown_exporter.rs  mod.rs  ocr_engine.rs
j36/src-tauri/src/search/: indexer.rs  mod.rs  search_engine.rs  tokenizer.rs
j36/src/components/: Sidebar.svelte  StylePanel.svelte
j36/src/stores/: appStore.ts
j36/src/styles/: global.css
j36/src/types/: index.ts
j36/src/utils/: helpers.ts  tauriApi.ts
j36/src/views/: BatchView.svelte  DiffView.svelte  LibraryView.svelte  OcrView.svelte  ReaderView.svelte  SearchView.svelte  SettingsView.svelte
j40/fuzzer/: Cargo.toml
j40/fuzzer/src/: cli.rs  crash.rs  distributed.rs  fuzzer.rs  llama.rs  main.rs  session.rs  taint.rs
j40/fuzzer/src/mutator/: arithmetic.rs  bit_flip.rs  dictionary.rs  mod.rs
j51/wasm/: Cargo.toml
j51/wasm/src/: lib.rs
j55/: Cargo.toml  test_baseline2.db-shm  test_baseline2.db-wal
j55/.cargo/: config.toml
j55/src/: db.rs  file_watcher.rs  handlers.rs  hasher.rs  main.rs  metrics.rs  recovery.rs  webhook.rs
j56/src-tauri/: Cargo.toml  tauri.conf.json
j56/src-tauri/src/: logger.rs  main.rs  replay.rs  serial_port.rs
j57/test_project/: __init__.py  app.py  config.py  enterprise.py  optional_deps.py  pyproject.toml  requirements.txt  utils.py
j6/src-tauri/: Cargo.toml  tauri.conf.json
j6/src-tauri/capabilities/: main.json
j6/src-tauri/icons/: .gitkeep
j6/src-tauri/src/: commands.rs  docker_client.rs  main.rs  models.rs  rate_limiter.rs  rules.rs  storage.rs  tls.rs  ws_client.rs
j71/dicom-parser/: Cargo.toml
j71/dicom-parser/src/: lib.rs
j76/backend/: CMakeLists.txt  build_cmake.bat  build_mingw.bat  build_msvc.bat  start_server.bat
j76/backend/src/: fluid_params.h  fluid_service.h  main.cpp
j79/: Cargo.toml  config.toml
j79/src/: config.rs  crypto.rs  data_pusher.rs  error.rs  main.rs  metrics.rs  metrics_server.rs  modbus_poller.rs  ring_buffer.rs
j82/rust/: Cargo.toml
j82/rust/src/: lib.rs
j83/: Cargo.toml
j83/src/: crypto.rs  discovery.rs  main.rs  transfer.rs
j89/src-tauri/: Cargo.toml  tauri.conf.json
j89/src-tauri/src/: capture.rs  main.rs  replay.rs  types.rs
j89/src-tauri/src/protocols/: dns.rs  http.rs  mod.rs  tcp.rs
j91/: BUGFIX.md  Cargo.toml  JOINT_CONSENSUS.md  README.md
j91/proto/: raft.proto
j91/src/: http_api.rs  lib.rs  main.rs  raft.rs  server.rs  storage.rs
j92/wasm/: Cargo.toml
j92/wasm/src/: lib.rs
j98/: pyproject.toml
j98/examples/: isolation.yaml  pipeline.yaml
j98/examples/plugins/: db_backup.py  hello_binary.py
j98/opsflow/: cli.py  config.py  engine.py  isolation.py  monitor.py  plugin.py
j98/opsflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
j98/tests/: test_hot_reload.py
(+1924 files in other folders)
