[package]
name = "udp_reliable_transport"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "udp_transport"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rand = "0.8"
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.0"
