[package]
name = "file-monitor"
version = "0.3.0"
edition = "2021"

[dependencies]
actix-web = "4"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
sha2 = "0.10"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
log = "0.4"
notify = "6"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
prometheus = "0.13"
reqwest = { version = "0.11", features = ["json"] }
