[package]
name = "data-sync-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
tokio-modbus = { version = "0.9", features = ["tcp", "rtu"] }
crossbeam-channel = "0.5"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.6"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
base64 = "0.22"
prometheus-client = "0.22"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
http = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
