[package]
name = "raft-kv"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
bytes = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
clap = { version = "4.0", features = ["derive"] }
bincode = "1.3"
reqwest = { version = "0.12", features = ["json"] }
sled = "0.34"

[build-dependencies]
tonic-build = "0.12"
