[package]
name = "ebook-drm-styler"
version = "1.0.0"
description = "Tauri application for Ebook DRM Styler"
authors = ["Ebook Styler Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
cc = "1.0"

[dependencies]
tauri = { version = "1.6", features = ["shell-open", "shell-execute", "shell-sidecar", "dialog-open", "dialog-save", "fs-all", "window-all", "notification-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ebook_styler_core = { path = "." }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
