[package]
name = "net_fuzzer"
version = "0.1.0"
edition = "2021"
description = "Coverage-guided network protocol fuzzer"

[dependencies]
libfuzzer-sys = "0.4"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
zmq = "0.10"
sqlite = "0.30"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
dashmap = "5.4"
bitvec = "1.0"
sha2 = "0.10"
humantime = "2.1"
fastrand = "2.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.0", features = ["full"] }
hex = "0.4"

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
