[package]
name = "dicom-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
dicom-object = "0.7"
dicom-value = "0.7"
dicom-core = "0.7"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_wasm_bindgen = "0.2"
web-sys = { version = "0.3", features = ["File", "Blob", "Performance"] }
js-sys = "0.3"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
