[package]
name = "serial-port-tool"
version = "0.1.0"
description = "A serial port debugging tool"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-all", "fs-all", "event-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.2"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
parking_lot = "0.12"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]