[package]
name = "docker-log-analyzer"
version = "0.1.0"
description = "Docker Log AI Analyzer"
authors = ["you"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "docker_log_analyzer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full", "sync"] }
tokio-stream = { version = "0.1", features = ["net", "ws"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
hyper = { version = "1.2", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1.0"
http-body-util = "0.1"
bytes = "1.5"
rustls = "0.22"
rustls-pemfile = "2.0"
rustls-native-certs = "0.7"
tokio-rustls = "0.25"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
bollard = { version = "0.16", features = ["chrono", "serde", "json", "stream"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.19"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
serde_yaml = "0.9"
notify-rust = "4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
dev = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
