[package]
name = "network-analyzer"
version = "0.1.0"
description = "跨平台网络分析工具"
authors = ["you"]
edition = "2021"
rust-version = "1.67"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pcap = "1.1"
etherparse = "0.13"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.35", features = ["full"] }
thiserror = "1.0"
regex = "1.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
